guessing at this point

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node ./index.js",
+    "start": "node ../Backend/index.js",
     "heroku-postbuild": "cd Backend/Frontend && npm install && npm run build"
   },
   "keywords": [],
