--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "backend",
+  "name": "bingeflicks",
   "version": "1.0.0",
   "description": "",
   "engines": {
     "node": "18.x"
   },
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node .",
-    "heroku-postbuild": "cd Backend/Frontend && npm install && npm run build"
+    "heroku-postbuild": "cd Frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
