--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "bingeflicks",
   "version": "1.0.0",
-  "description": "",
+  "description": "Browse and shop for movies",
   "engines": {
     "node": "18.x"
   },
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "heroku-postbuild": "cd Frontend && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION= false cd Frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
